fixed icon alignment in stick-bottom, Jira#db7af27

--- a/layout/sidebars/_menu_desktop.scss
+++ b/layout/sidebars/_menu_desktop.scss
@@ -570,9 +570,9 @@ html.lt-ie9, html.gte-ie9 {
   }
 }
 
-html.lt-ie9  li.stick-bottom a[class*="icon-"]:before {
+html.gte-ie9  li.stick-bottom a[class*="icon-"]:before {
   @include rem('margin-top', 10);
 }
-html.gte-ie9  li.stick-bottom a[class*="icon-"]:before {
-  @include rem('margin-top', 0);
+html.lt-ie9  li.stick-bottom a[class*="icon-"]:before {
+  @include rem('margin-top', 10);
 }
